<resources>
    <string name="app_name">FortunaApp</string>
    <string name="menu">overflowMenu</string>
    <string name="profile_button">Profile Button</string>
    <string name="home_button">Home Button</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="add_supply">Add Supply</string>
    <string name="go_back">Go Back</string>
    <string name="withdraw_supply">Withdraw Supply</string>
    <string name="enter_dealer_name">Enter Dealer Name</string>
    <string name="withdraw">Withdraw</string>
    <string name="supply_requests">Supply Requests</string>
    <string name="transactions">Transactions</string>
    <string name="inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string-array name="supplyType">
        <item>Select Supply Type</item>
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Fertilizer</item>
        <item>Seeds</item>
    </string-array>
    <string-array name="userType">
        <item>Select Supply Type</item>
        <item>Dealer</item>
        <item>Inventory Manager</item>
    </string-array>
</resources>