<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".SupplyRequestsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:padding="5dp"
        android:id="@+id/header"
        android:contentDescription="@string/menu"
        android:background="@color/frost">

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:id="@+id/backButton"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/go_back"
            android:drawableTop="@drawable/baseline_arrow_back_24"
            android:background="null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/supply_requests"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:padding="10dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/frost"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/homeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:background="null"
            android:contentDescription="@string/home_button"
            android:drawableTop="@drawable/house_solid" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:id="@+id/profileButton"
            android:drawableTop="@drawable/profile"
            android:contentDescription="@string/profile_button"
            android:background="null"/>
    </LinearLayout>

</RelativeLayout>